[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nightlies"
version = "0.1.0"
description = "CLI for querying nightly.cs.washington.edu logs and reports"
readme = "README.md"
authors = [
    { name = "Pavel Panchekha", email = "me@pavpanchekha.com" },
]
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["nightlies", "cli", "logs", "reports"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/pavpanchekha/nightlies"
Repository = "https://github.com/pavpanchekha/nightlies"
Issues = "https://github.com/pavpanchekha/nightlies/issues"

[project.scripts]
nightlies = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
